refactor(android, src/index.ts): refactor